<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/guider"
    android:orientation="vertical"

    tools:context="com.example.android.tourguideapp.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="@string/tourism_attraction"
        android:textAllCaps="true"
        android:textColor="#0000ff"
        android:textSize="20sp"
        android:gravity="center"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <TextView
            android:id="@+id/histext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/historic_building"
            android:textColor="#ff0000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/hotels"
            android:textColor="#ff0000"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/historic"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:src="@drawable/red_fort" />

        <ImageView
            android:id="@+id/hotel"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_marginEnd="9dp"
            android:layout_marginRight="9dp"
            android:layout_weight="1"
            android:src="@drawable/hotels" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <TextView
            android:id="@+id/restext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/restaurents"
            android:textColor="#ff0000"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/parks"
            android:textColor="#ff0000"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/restaurent"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:src="@drawable/restaurant" />

        <ImageView
            android:id="@+id/parks"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginEnd="9dp"
            android:layout_marginRight="9dp"
            android:layout_weight="1"
            android:src="@drawable/parks" />
    </LinearLayout>


</LinearLayout>